[gd_scene load_steps=27 format=3 uid="uid://dkft88acm2b7d"]

[ext_resource type="Script" path="res://level_select.gd" id="1_rap64"]
[ext_resource type="Texture2D" uid="uid://b10jrpusvfj6p" path="res://back_one.png" id="2_coqao"]
[ext_resource type="Texture2D" uid="uid://6i7k7p5b26om" path="res://back_two.png" id="3_3wrhh"]
[ext_resource type="Script" path="res://change_scene_button.gd" id="4_4lkbv"]
[ext_resource type="PackedScene" uid="uid://cyukkc7p2ok7i" path="res://scene_change_node.tscn" id="5_i4osk"]
[ext_resource type="FontFile" uid="uid://brxcmskbwk081" path="res://daydream_3/Daydream.ttf" id="6_h75v8"]
[ext_resource type="Texture2D" uid="uid://dbnr1gufy0gyr" path="res://house_level_one.png" id="7_41elt"]
[ext_resource type="Texture2D" uid="uid://dr8bj5356128p" path="res://house_level_two.png" id="8_2hg8x"]
[ext_resource type="PackedScene" uid="uid://dqisoqw8sxg0r" path="res://world_tutorial.tscn" id="9_f1fcm"]
[ext_resource type="Texture2D" uid="uid://cnrwkn57fqgss" path="res://bridge_one.png" id="10_qmxws"]
[ext_resource type="Texture2D" uid="uid://bkljm8p66nec" path="res://bridge_two.png" id="11_ls2x1"]
[ext_resource type="PackedScene" uid="uid://cj5wb0iupbv5k" path="res://world_bridge.tscn" id="12_cldyp"]
[ext_resource type="Texture2D" uid="uid://yhsbkpijevwo" path="res://tree_one.png" id="13_km645"]
[ext_resource type="Texture2D" uid="uid://c337gy4w1ib1r" path="res://tree_two.png" id="14_hd315"]
[ext_resource type="PackedScene" uid="uid://dut8t0p6qgkds" path="res://world_tree.tscn" id="15_crdml"]
[ext_resource type="Texture2D" uid="uid://b8j8pagwavrdg" path="res://pipe.png" id="16_quxmo"]
[ext_resource type="Texture2D" uid="uid://ddt524jkgq70q" path="res://pipe_two.png" id="17_vviov"]
[ext_resource type="PackedScene" uid="uid://ipq1c4yiyx7b" path="res://world_pipes.tscn" id="18_ikuci"]
[ext_resource type="AudioStream" uid="uid://cj6834otcc4jc" path="res://paper.wav" id="19_dhl3j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kx4f5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_coqao")
}, {
"duration": 1.0,
"texture": ExtResource("3_3wrhh")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ua50"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5cr4m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bim84"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_41elt")
}, {
"duration": 1.0,
"texture": ExtResource("8_2hg8x")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3ci1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_qmxws")
}, {
"duration": 1.0,
"texture": ExtResource("11_ls2x1")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xuytt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_km645")
}, {
"duration": 1.0,
"texture": ExtResource("14_hd315")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_mmevm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_quxmo")
}, {
"duration": 1.0,
"texture": ExtResource("17_vviov")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rap64")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 350

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Control"]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kx4f5")
autoplay = "default"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer/Control"]
layout_mode = 0
offset_left = -143.0
offset_top = -155.0
offset_right = 130.0
offset_bottom = 171.0
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8ua50")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5cr4m")
flat = true
script = ExtResource("4_4lkbv")
scene_changer = NodePath("../SceneChangeNode")
can_be_clicked = true

[node name="SceneChangeNode" parent="VBoxContainer/HBoxContainer/Control" instance=ExtResource("5_i4osk")]
current_parent_scene = NodePath("../../../..")

[node name="Control5" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TimeText" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Control5"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -217.0
offset_right = 109.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] [wave]0:00 [/wave][/center]"
autowrap_mode = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Control5"]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bim84")
autoplay = "default"

[node name="WorldOneButton" type="Button" parent="VBoxContainer/HBoxContainer/Control5"]
layout_mode = 0
offset_left = -133.0
offset_top = -144.0
offset_right = 140.0
offset_bottom = 182.0
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8ua50")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5cr4m")
flat = true
script = ExtResource("4_4lkbv")
scene_changer = NodePath("../SceneChangeNode")
can_be_clicked = true

[node name="SceneChangeNode" parent="VBoxContainer/HBoxContainer/Control5" instance=ExtResource("5_i4osk")]
next_scene = ExtResource("9_f1fcm")
current_parent_scene = NodePath("../../../..")

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Control5"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = 215.0
offset_right = 109.0
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] [wave]30 ft [/wave][/center]"

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Control2"]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3ci1p")
autoplay = "default"

[node name="WorldTwoButton" type="Button" parent="VBoxContainer/HBoxContainer/Control2"]
layout_mode = 0
offset_left = -131.0
offset_top = -144.0
offset_right = 142.0
offset_bottom = 182.0
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8ua50")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5cr4m")
flat = true
script = ExtResource("4_4lkbv")
scene_changer = NodePath("../SceneChangeNode")
can_be_clicked = true

[node name="SceneChangeNode" parent="VBoxContainer/HBoxContainer/Control2" instance=ExtResource("5_i4osk")]
next_scene = ExtResource("12_cldyp")
current_parent_scene = NodePath("../../../..")

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Control2"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = 209.0
offset_right = 106.0
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] 40 ft [/center]"

[node name="TimeText" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Control2"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -217.0
offset_right = 109.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] [wave]0:00 [/wave][/center]"
autowrap_mode = 0

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Control3"]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_xuytt")
autoplay = "default"

[node name="WorldThreeButton" type="Button" parent="VBoxContainer/HBoxContainer/Control3"]
layout_mode = 0
offset_left = -133.0
offset_top = -144.0
offset_right = 140.0
offset_bottom = 182.0
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8ua50")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5cr4m")
flat = true
script = ExtResource("4_4lkbv")
scene_changer = NodePath("../SceneChangeNode")
can_be_clicked = true

[node name="SceneChangeNode" parent="VBoxContainer/HBoxContainer/Control3" instance=ExtResource("5_i4osk")]
next_scene = ExtResource("15_crdml")
current_parent_scene = NodePath("../../../..")

[node name="RichTextLabel4" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Control3"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = 208.0
offset_right = 106.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] 60 ft [/center]"

[node name="TimeText" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Control3"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -217.0
offset_right = 109.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] [wave]0:00 [/wave][/center]"
autowrap_mode = 0

[node name="Control4" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Control4"]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_mmevm")
autoplay = "default"

[node name="WorldFourButton" type="Button" parent="VBoxContainer/HBoxContainer/Control4"]
layout_mode = 0
offset_left = -132.0
offset_top = -144.0
offset_right = 141.0
offset_bottom = 182.0
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8ua50")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5cr4m")
flat = true
script = ExtResource("4_4lkbv")
scene_changer = NodePath("../SceneChangeNode")
can_be_clicked = true

[node name="SceneChangeNode" parent="VBoxContainer/HBoxContainer/Control4" instance=ExtResource("5_i4osk")]
next_scene = ExtResource("18_ikuci")
current_parent_scene = NodePath("../../../..")

[node name="RichTextLabel5" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Control4"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = 194.0
offset_right = 144.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] 100 ft [/center]"

[node name="TimeText" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Control4"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -217.0
offset_right = 109.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] [wave]0:00 [/wave][/center]"
autowrap_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_dhl3j")
volume_db = -10.0
autoplay = true

[node name="Tip4" type="RichTextLabel" parent="."]
z_index = 3
clip_contents = false
layout_mode = 0
offset_left = 424.0
offset_top = -12.0
offset_right = 1501.0
offset_bottom = 273.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("6_h75v8")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]
to  come  back  here
[wave amp=45 freq=5] hold (l) [/wave]
[/center]"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control/BackButton" to="VBoxContainer/HBoxContainer/Control/BackButton" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control5/WorldOneButton" to="VBoxContainer/HBoxContainer/Control5/WorldOneButton" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control2/WorldTwoButton" to="VBoxContainer/HBoxContainer/Control2/WorldTwoButton" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control3/WorldThreeButton" to="VBoxContainer/HBoxContainer/Control3/WorldThreeButton" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control4/WorldFourButton" to="VBoxContainer/HBoxContainer/Control4/WorldFourButton" method="_on_pressed"]
